--- a/experiments/sunnycows/item_item.ipynb
+++ b/experiments/sunnycows/item_item.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_42930/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_43127/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:29: RuntimeWarning: Mean of empty slice.\n",
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:30: RuntimeWarning: Mean of empty slice.\n",
       "  self.means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
       "/Users/oleh.sannikov/miniconda3/envs/recsys/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
@@ -125,8 +125,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:53: RuntimeWarning: Mean of empty slice.\n",
-      "  average_rating = self.normalized_matrix.getcol(book).data.mean()\n"
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:54: RuntimeWarning: Mean of empty slice.\n",
+      "  average_rating = self.normalized_matrix.getcol(book).data.mean()\n",
+      " 28%|██▊       | 28/100 [00:33<01:18,  1.10s/it]"
      ]
     }
    ],
@@ -142,15 +150,10 @@
     {
      "data": {
       "text/plain": [
-       "73871    0671000403\n",
-       "57042    0373078358\n",
-       "31483    0425176940\n",
-       "2243     0345348109\n",
-       "50150    0441644511\n",
-       "Name: ISBN, dtype: object"
+       "Series([], Name: ISBN, dtype: object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +172,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 366.27it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 235.91it/s]\n"
      ]
     },
     {
@@ -178,7 +181,7 @@
        "0.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +198,7 @@
     "    if len(relevant_items) == 0:\n",
     "        continue\n",
     "    user_id = test_users[i]\n",
-    "    ap = average_precision(best_items[user_id]['ISBN'].to_numpy(), relevant_items['ISBN'].to_numpy())\n",
+    "    ap = average_precision(best_items[user_id]['ISBN'].to_numpy(), relevant_items['ISBN'].to_numpy(), k=5)\n",
     "    mean_ap += ap\n",
     "\n",
     "mean_ap /= len(test_users)\n",
