--- a/experiments/contentbased.ipynb
+++ b/experiments/contentbased.ipynb
@@ -118,7 +118,6 @@
    "source": [
     "df_prep_step_1 = pd.merge(books, ratings.query(\"`Rating` > 0\"), on='ISBN', how='inner')\n",
     "\n",
-    "# join users data\n",
     "df_prep_step_2 = pd.merge(df_prep_step_1, users, on='User-ID', how='inner')"
    ],
    "metadata": {
@@ -516,11 +515,20 @@
    ]
   },
   {
-   "cell_type": "code",
+   "cell_type": "markdown",
+   "source": [
+    "We can clearly see that content based approach performed better than other options, perhaps due to TfIdf embeddings and data preprocessing"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "metadata": {
+    "collapsed": false
+   }
   }
  ]
 }
