correct isbn remap

--- a/experiments/sunnycows/item_item.ipynb
+++ b/experiments/sunnycows/item_item.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_43127/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_44530/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -36,6 +36,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from scipy.sparse import csr_matrix\n",
+    "# from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "# def list_minus(a, b):\n",
+    "#     return [x for x in a if x not in b]\n",
+    "\n",
+    "# class ItemRecommender():\n",
+    "#     def __init__(self):\n",
+    "#         super().__init__()\n",
+    "#         self.n_recomm = 5\n",
+    "\n",
+    "#     def fit(self, items, users, ratings):\n",
+    "#         books = items.reset_index() # add index as a column\n",
+    "#         isbn_mapping = {category: idx for idx, category in enumerate(books['ISBN'])}\n",
+    "        \n",
+    "#         ratings = ratings.copy()\n",
+    "#         ratings['ISBN_i'] = ratings['ISBN'].map(isbn_mapping) # map ISBN to index\n",
+    "#         ratings.dropna(subset=['ISBN_i'], inplace=True) # drop rows with NaN ISBN_i\n",
+    "#         ratings['ISBN_i'] = ratings['ISBN_i'].astype(np.int32)\n",
+    "\n",
+    "#         self.ratings = ratings\n",
+    "\n",
+    "#         # Create a sparse user-item matrix\n",
+    "#         user_item_matrix = csr_matrix((ratings['Rating'], (ratings['User-ID'], ratings['ISBN_i'])), dtype=np.float64)\n",
+    "\n",
+    "#         # Normalize the user-item matrix\n",
+    "#         normalized_matrix = user_item_matrix.copy()\n",
+    "#         self.means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
+    "#         normalized_matrix.data -= np.repeat(self.means, np.diff(normalized_matrix.indptr))\n",
+    "#         self.normalized_matrix = normalized_matrix\n",
+    "\n",
+    "#         self.similarity_matrix = cosine_similarity(normalized_matrix.T, dense_output=False)\n",
+    "#         self.books = books\n",
+    "        \n",
+    "#     def predict(self, users, items):\n",
+    "#         user_predictions = {}\n",
+    "#         for user_id in users:\n",
+    "#             # Get the row corresponding to the user\n",
+    "#             user_row = self.normalized_matrix.getrow(user_id)\n",
+    "#             top_rated = np.argsort(user_row.data)[::-1][:self.n_recomm]\n",
+    "\n",
+    "#             recommended_books = []\n",
+    "#             for book_i in top_rated:\n",
+    "#                 book_row = self.similarity_matrix.getrow(book_i)\n",
+    "#                 most_similar_books = np.argsort(book_row.data)[::-1][:self.n_recomm]\n",
+    "#                 recommended_books.extend(most_similar_books)\n",
+    "\n",
+    "#             # print(f\"User recommendations: {top_rated}\")\n",
+    "#             # print(f\"Recommended books: {recommended_books}\")\n",
+    "#             recommended_books = list_minus(set(recommended_books), user_row.indices)\n",
+    "#             # print(f\"Recommended books: {recommended_books}\")\n",
+    "\n",
+    "#             average_ratings = {}\n",
+    "#             for book in recommended_books:\n",
+    "#                 # Get the average rating for the book\n",
+    "#                 average_rating = self.normalized_matrix.getcol(book).data.mean()\n",
+    "#                 average_ratings[book] = average_rating\n",
+    "\n",
+    "#             sorted_recommended_books = sorted(recommended_books, key=lambda book: average_ratings[book], reverse=True)[:self.n_recomm]\n",
+    "#             # print(f\"Sorted recommended books: {sorted_recommended_books}\")\n",
+    "#             isbns = self.ratings[self.ratings['ISBN_i'].isin(sorted_recommended_books)]['ISBN']\n",
+    "#             # print(f\"ISBNs: {isbns}\")\n",
+    "#             user_predictions[user_id] = self.books[self.books['ISBN'].isin(isbns)]\n",
+    "\n",
+    "#         return user_predictions\n",
+    "\n",
+    "#     def eval(self, gt_ratings, pred_ratings):\n",
+    "#         pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import sys\n",
     "sys.path.append('../..')\n",
     "\n",
@@ -45,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:30: RuntimeWarning: Mean of empty slice.\n",
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:32: RuntimeWarning: Mean of empty slice.\n",
       "  self.means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
       "/Users/oleh.sannikov/miniconda3/envs/recsys/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
@@ -77,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +162,7 @@
        "100"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +183,7 @@
        "(271379, 5)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,23 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:54: RuntimeWarning: Mean of empty slice.\n",
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:60: RuntimeWarning: Mean of empty slice.\n",
       "  average_rating = self.normalized_matrix.getcol(book).data.mean()\n",
-      " 28%|██▊       | 28/100 [00:33<01:18,  1.10s/it]"
+      "/Users/oleh.sannikov/miniconda3/envs/recsys/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
      ]
     }
    ],
@@ -144,44 +214,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], Name: ISBN, dtype: object)"
+       "10"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(best_items)\n",
-    "best_items[38781]['ISBN']"
+    "len(best_items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#best_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 235.91it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 116.75it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.006666666666666666"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,6 +277,7 @@
     "        continue\n",
     "    user_id = test_users[i]\n",
     "    ap = average_precision(best_items[user_id]['ISBN'].to_numpy(), relevant_items['ISBN'].to_numpy(), k=5)\n",
+    "    # print(f\"Relevant items: {relevant_items['ISBN'].to_numpy(), best_items[user_id]}\")\n",
     "    mean_ap += ap\n",
     "\n",
     "mean_ap /= len(test_users)\n",
