DNN recommender (draft)

--- a/experiments/sunnycows/item_item.ipynb
+++ b/experiments/sunnycows/item_item.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_44530/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_71875/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/item_collaborative_filtering.py:32: RuntimeWarning: Mean of empty slice.\n",
-      "  self.means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/utils/data_preprocessing.py:60: RuntimeWarning: Mean of empty slice.\n",
+      "  means = np.array([normalized[i].data.mean() for i in range(normalized.shape[0])])\n",
       "/Users/oleh.sannikov/miniconda3/envs/recsys/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
      ]
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "1000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
