--- a/experiments/sunnycows/user_user.ipynb
+++ b/experiments/sunnycows/user_user.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_43281/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_44573/2231409931.py:1: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -61,8 +61,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/recommenders/user_collaborative_filtering.py:28: RuntimeWarning: Mean of empty slice.\n",
-      "  self.means = np.array([normalized_matrix[i].data.mean() for i in range(normalized_matrix.shape[0])])\n",
+      "/Users/oleh.sannikov/Documents/Навчання/Науки про дані/RecSys/CP/rs-ucu-books-recommender/experiments/sunnycows/../../src/utils/data_preprocessing.py:60: RuntimeWarning: Mean of empty slice.\n",
+      "  means = np.array([normalized[i].data.mean() for i in range(normalized.shape[0])])\n",
       "/Users/oleh.sannikov/miniconda3/envs/recsys/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n"
      ]
