--- a/experiments/sunnycows/dnn_experiments.ipynb
+++ b/experiments/sunnycows/dnn_experiments.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_19765/57670943.py:8: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/yn/16crnc792zg2yr78zf0qg0j40000gq/T/ipykernel_35645/914109045.py:4: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  users = pd.read_csv('../../data/Users.csv', delimiter=';')\n"
      ]
     }
@@ -18,10 +18,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../..')\n",
-    "from src.recommenders.dnn_recommender import DNNRecommender\n",
-    "\n",
     "users = pd.read_csv('../../data/Users.csv', delimiter=';')\n",
     "books = pd.read_csv('../../data/Books.csv', delimiter=';', dtype={'ISBN': str, 'Title': str, 'Author': str, 'Year': np.int16, 'Publisher': str})\n",
     "ratings = pd.read_csv('../../data/Ratings.csv', delimiter=';', dtype={'User-ID': np.int32, 'ISBN': str, 'Rating': np.int8})"
@@ -29,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +57,7 @@
        "(105283,)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1149780, 4)\n",
-      "(433671, 4)\n"
+      "(1149780, 3)\n",
+      "(433671, 3)\n"
      ]
     }
    ],
@@ -94,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +124,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>index</th>\n",
        "      <th>ISBN</th>\n",
        "      <th>Title</th>\n",
        "      <th>Author</th>\n",
@@ -138,6 +135,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0195153448</td>\n",
        "      <td>Classical Mythology</td>\n",
        "      <td>Mark P. O. Morford</td>\n",
@@ -146,6 +144,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0002005018</td>\n",
        "      <td>Clara Callan</td>\n",
        "      <td>Richard Bruce Wright</td>\n",
@@ -154,6 +153,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0060973129</td>\n",
        "      <td>Decision in Normandy</td>\n",
        "      <td>Carlo D'Este</td>\n",
@@ -162,6 +162,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0374157065</td>\n",
        "      <td>Flu: The Story of the Great Influenza Pandemic...</td>\n",
        "      <td>Gina Bari Kolata</td>\n",
@@ -170,6 +171,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0393045218</td>\n",
        "      <td>The Mummies of Urumchi</td>\n",
        "      <td>E. J. W. Barber</td>\n",
@@ -181,12 +183,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         ISBN                                              Title  \\\n",
-       "0  0195153448                                Classical Mythology   \n",
-       "1  0002005018                                       Clara Callan   \n",
-       "2  0060973129                               Decision in Normandy   \n",
-       "3  0374157065  Flu: The Story of the Great Influenza Pandemic...   \n",
-       "4  0393045218                             The Mummies of Urumchi   \n",
+       "   index        ISBN                                              Title  \\\n",
+       "0      0  0195153448                                Classical Mythology   \n",
+       "1      1  0002005018                                       Clara Callan   \n",
+       "2      2  0060973129                               Decision in Normandy   \n",
+       "3      3  0374157065  Flu: The Story of the Great Influenza Pandemic...   \n",
+       "4      4  0393045218                             The Mummies of Urumchi   \n",
        "\n",
        "                 Author  Year                Publisher  \n",
        "0    Mark P. O. Morford  2002  Oxford University Press  \n",
@@ -196,7 +198,7 @@
        "4       E. J. W. Barber  1999   W. W. Norton & Company  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,6 @@
        "      <th></th>\n",
        "      <th>User-ID</th>\n",
        "      <th>Age</th>\n",
-       "      <th>Countries</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -241,46 +242,41 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>17.0</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  User-ID   Age Countries\n",
-       "0       1   NaN      None\n",
-       "1       2  18.0      None\n",
-       "2       3   NaN      None\n",
-       "3       4  17.0      None\n",
-       "4       5   NaN      None"
+       "  User-ID   Age\n",
+       "0       1   NaN\n",
+       "1       2  18.0\n",
+       "2       3   NaN\n",
+       "3       4  17.0\n",
+       "4       5   NaN"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -322,22 +318,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>276725</td>\n",
-       "      <td>034545104X</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>276726</td>\n",
        "      <td>0155061224</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>276727</td>\n",
-       "      <td>0446520802</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -351,20 +335,32 @@
        "      <td>0521795028</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>276736</td>\n",
+       "      <td>3257224281</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>276737</td>\n",
+       "      <td>0600570967</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   User-ID        ISBN  Rating\n",
-       "0   276725  034545104X       0\n",
        "1   276726  0155061224       5\n",
-       "2   276727  0446520802       0\n",
        "3   276729  052165615X       3\n",
-       "4   276729  0521795028       6"
+       "4   276729  0521795028       6\n",
+       "6   276736  3257224281       8\n",
+       "7   276737  0600570967       6"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,6 +396,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import torch\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# Handle missing values\n",
@@ -436,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,44 +444,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 14759.5400390625\n",
-      "Epoch 2/20, Loss: 590756.9375\n",
-      "Epoch 3/20, Loss: 35257.85546875\n",
-      "Epoch 4/20, Loss: 152305.125\n",
-      "Epoch 5/20, Loss: 229049.3125\n",
-      "Epoch 6/20, Loss: 130084.3828125\n",
-      "Epoch 7/20, Loss: 35356.265625\n",
-      "Epoch 8/20, Loss: 1559.8394775390625\n",
-      "Epoch 9/20, Loss: 32877.8828125\n",
-      "Epoch 10/20, Loss: 73503.203125\n",
-      "Epoch 11/20, Loss: 76066.109375\n",
-      "Epoch 12/20, Loss: 47980.29296875\n",
-      "Epoch 13/20, Loss: 16931.10546875\n",
-      "Epoch 14/20, Loss: 1486.2379150390625\n",
-      "Epoch 15/20, Loss: 5017.234375\n",
-      "Epoch 16/20, Loss: 16844.78125\n",
-      "Epoch 17/20, Loss: 22456.65625\n",
-      "Epoch 18/20, Loss: 17835.423828125\n",
-      "Epoch 19/20, Loss: 8459.88671875\n",
-      "Epoch 20/20, Loss: 1716.762451171875\n",
-      "Test Loss: 575.8331298828125\n"
+      "Epoch 1/20, Loss: 52154.8046875\n",
+      "Epoch 2/20, Loss: 560947.0625\n",
+      "Epoch 3/20, Loss: 57070.15625\n",
+      "Epoch 4/20, Loss: 89733.3125\n",
+      "Epoch 5/20, Loss: 238248.34375\n",
+      "Epoch 6/20, Loss: 149470.359375\n",
+      "Epoch 7/20, Loss: 24795.333984375\n",
+      "Epoch 8/20, Loss: 12021.0283203125\n",
+      "Epoch 9/20, Loss: 66130.9765625\n",
+      "Epoch 10/20, Loss: 87542.15625\n",
+      "Epoch 11/20, Loss: 48508.58984375\n",
+      "Epoch 12/20, Loss: 6999.02099609375\n",
+      "Epoch 13/20, Loss: 7323.72021484375\n",
+      "Epoch 14/20, Loss: 29912.12890625\n",
+      "Epoch 15/20, Loss: 35077.30859375\n",
+      "Epoch 16/20, Loss: 18501.794921875\n",
+      "Epoch 17/20, Loss: 2527.4072265625\n",
+      "Epoch 18/20, Loss: 3296.23046875\n",
+      "Epoch 19/20, Loss: 14217.1328125\n",
+      "Epoch 20/20, Loss: 19128.796875\n",
+      "Test Loss: 13333.8740234375\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# Split data\n",
     "train_data, test_data, train_ratings, test_ratings = train_test_split(\n",
@@ -534,6 +528,11 @@
     "num_users = len(user_encoder.classes_)\n",
     "num_items = len(isbn_encoder.classes_)\n",
     "\n",
+    "user_ids = train_data_tensor[:, 0].long()\n",
+    "item_ids = train_data_tensor[:, 1].long()\n",
+    "user_features = train_data_tensor[:, 2:3]\n",
+    "item_features = train_data_tensor[:, 3:]\n",
+    "\n",
     "num_user_features = user_features.shape[1]  # Age\n",
     "num_item_features = item_features.shape[1]  # Author_encoded, Year, and Publisher_encoded\n",
     "\n",
@@ -550,11 +549,6 @@
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
     "    \n",
-    "    user_ids = train_data_tensor[:, 0].long()\n",
-    "    item_ids = train_data_tensor[:, 1].long()\n",
-    "    user_features = train_data_tensor[:, 2:3]\n",
-    "    item_features = train_data_tensor[:, 3:]\n",
-    "\n",
     "    predictions = model(user_ids, item_ids, user_features, item_features)\n",
     "    loss = criterion(predictions, train_ratings_tensor)\n",
     "    \n",
